--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <script src="https://cdn.jsdelivr.net/npm/papaparse@5.3.2/papaparse.min.js"></script>
     <style>
         :root {
-            --bg: linear-gradient(180deg, #081018, #13171c);
+            --bg: linear-gradient(180deg, #191D24, #232935);
             --card: rgba(255, 255, 255, 0.02);
-            --muted: rgba(200, 210, 220, 0.78);
-            --accent: #63b3ff;
+            --muted: rgba(218, 223, 233, 0.78);
+            --accent: #9EF09E;
             font-family: -apple-system, system-ui, "Segoe UI", Roboto, "Helvetica Neue", Arial;
         }
 
@@ -72,7 +72,7 @@
             padding: 8px 12px;
             border-radius: 10px;
             border: 1px solid rgba(255, 255, 255, 0.06);
-            background: linear-gradient(180deg, #7fc8ff, #3b9be6);
+            background: linear-gradient(180deg, #A1D6FC, #37CDC1);
             color: #04243a;
             font-weight: 700;
             cursor: pointer;
@@ -173,7 +173,7 @@
     <div class="app">
         <div class="top">
             <div class="logo"><svg width="28" height="28" viewBox="0 0 24 24" fill="none">
-                    <rect x="2" y="2" width="20" height="20" rx="6" fill="#63b3ff"></rect>
+                    <rect x="2" y="2" width="20" height="20" rx="6" fill="#9EF09E"></rect>
                     <path d="M7 14.5L10.5 10L13 13.5L17 8" stroke="#fff" stroke-width="1.2" stroke-linecap="round" stroke-linejoin="round" />
                 </svg></div>
             <div>
